--- a/style.css
+++ b/style.css
@@ -61,3 +61,14 @@ nav ul li a:hover::after{
     width:100%;
 
 }
+.haeder-text{
+    margin-top: 20%;
+    font-size: 30px;  
+}
+.haeder-text h1{
+    font-size: 60px;
+    margin-top: 20px;
+}
+.haeder-text h1 span{
+    color: #ff004f;
+}
